update job parameters to be only of one job type

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -10,7 +10,7 @@ components:
         {% endfor %}
 
     job_definitions:
-      anyOf:
+      oneOf:
         {% for job_type in job_types %}
         - $ref: "#/components/schemas/{{ job_type }}JobDefinition"
         {% endfor %}
