refactor job_parameters.yml.j2 to correctly parse required parameters

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -21,7 +21,31 @@ components:
         - $ref: "#/components/schemas/{{ job_type }}Parameters"
         {% endfor %}
 
+    job_specification:
+      oneOf:
+        {% for job_type in job_types %}
+        - $ref: "#/components/schemas/{{ job_type }}Specification"
+        {% endfor %}
+
     {% for job_type, job_spec in job_types.items() %}
+    {{ job_type }}Parameters:
+      description: Parameters for running {{ job_type }} jobs, including specific granules
+      type: object
+      additionalProperties: false
+      {% for parameter, parameter_spec in job_spec['parameters'].items() if 'api_schema' in parameter_spec and parameter in job_spec.get('required_parameters', []) %}
+      {% if loop.first %}
+      required:
+      {% endif %}
+        - {{ parameter }}
+      {% endfor %}
+      {% for parameter, parameter_spec in job_spec['parameters'].items() if 'api_schema' in parameter_spec %}
+      {% if loop.first %}
+      properties:
+      {% endif %}
+        {{ parameter }}:
+          {{ json.dumps(parameter_spec['api_schema']) }}
+      {% endfor %}
+
     {{ job_type }}Job:
       description: Contains user provided information on running a new {{ job_type }} job.
       type: object
@@ -36,38 +60,10 @@ components:
           minLength: 1
           maxLength: 20
         job_parameters:
-          type: object
-          additionalProperties: false
-          properties:
-            {% for parameter, parameter_spec in job_spec['parameters'].items() if 'api_schema' in parameter_spec %}
-            {{ parameter }}:
-              {{ json.dumps(parameter_spec[ 'api_schema' ]) }}
-            {% endfor %}
-    {% endfor %}
+          $ref: "#/components/schemas/{{ job_type }}Parameters"
 
-
-    {% for job_type, job_spec in job_types.items() %}
-    {{ job_type }}Parameters:
-      description: Parameters for running {{ job_type }} jobs
-      type: object
-      {% for parameter, parameter_spec in job_spec['parameters'].items() if 'api_schema' in parameter_spec and parameter not in job_spec.get('required_parameters', []) %}
-      {% if loop.first %}
-      properties:
-      {% endif %}
-        {{ parameter }}:
-          {{ json.dumps(parameter_spec['api_schema']) }}
-      {% endfor %}
-    {% endfor %}
-
-    job_definitions:
-      oneOf:
-        {% for job_type in job_types %}
-        - $ref: "#/components/schemas/{{ job_type }}Definition"
-        {% endfor %}
-
-    {% for job_type, job_spec in job_types.items() %}
-    {{ job_type }}Definition:
-      description: Contains user provided information on running a new {{ job_type }} job.
+    {{ job_type }}Specification:
+      description: Contains user provided information on creating a new {{ job_type }} subscription, without specific granules.
       type: object
       additionalProperties: false
       properties:
@@ -82,9 +78,12 @@ components:
         job_parameters:
           type: object
           additionalProperties: false
+          {% for parameter, parameter_spec in job_spec['parameters'].items() if 'api_schema' in parameter_spec and parameter not in job_spec.get('required_parameters', []) %}
+          {% if loop.first %}
           properties:
-            {% for parameter, parameter_spec in job_spec[ 'parameters' ].items() if 'api_schema' in parameter_spec if parameter not in job_spec['required_parameters'] %}
+          {% endif %}
             {{ parameter }}:
               {{ json.dumps(parameter_spec[ 'api_schema' ]) }}
-            {% endfor %}
+          {% endfor %}
+
     {% endfor %}
