flag job_type and name as required for subscription job specifications

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -66,6 +66,9 @@ components:
       description: Contains user provided information on creating a new {{ job_type }} subscription, without specific granules.
       type: object
       additionalProperties: false
+      required:
+        - job_type
+        - name
       properties:
         job_type:
           type: string
