flag job_type and job_parameters as required for POST /jobs schema

--- a/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/job_parameters.yml.j2
@@ -50,6 +50,9 @@ components:
       description: Contains user provided information on running a new {{ job_type }} job.
       type: object
       additionalProperties: false
+      required:
+        - job_type
+        - job_parameters
       properties:
         job_type:
           type: string
