--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -53,7 +53,7 @@ Resources:
         {{ k }}: {{ v.get('default') or v['api_schema'].get('default') }}
         {% endfor %}
       ContainerProperties:
-        Image: !Sub "{{ job_spec['image'] }}:${ImageTag}"
+        Image: !Sub "{{ job_spec['image'] }}:{{ job_spec['image_tag'] if 'image_tag' in job_spec else '${ImageTag}' }}"
         JobRoleArn: !Ref TaskRoleArn
         ResourceRequirements:
           - Type: VCPU
