--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -94,6 +94,8 @@
         "JobDefinition": "{{ '${'+ snake_to_pascal_case(job_type) + '}' }}",
         "JobName.$": "$.job_id",
         "JobQueue": "${JobQueueArn}",
+        "ShareIdentifier": "default",
+        "SchedulingPriorityOverride": $.priority,
         "Parameters.$": "$.job_parameters",
         "ContainerOverrides.$": "$.container_overrides",
         "RetryStrategy": {
