--- a/apps/api/api-cf.yml.j2
+++ b/apps/api/api-cf.yml.j2
@@ -88,6 +88,7 @@ Resources:
   Stage:
     Type: AWS::ApiGateway::Stage
     Properties:
+      StageName: api
       RestApiId: !Ref Api
       DeploymentId: !Ref Deployment{{ random_id }}
       AccessLogSetting:
