--- a/apps/api/api-cf.yml.j2
+++ b/apps/api/api-cf.yml.j2
@@ -50,14 +50,14 @@ Conditions:
 Outputs:
 
   Url:
-    Value: !If [UseCustomDomainName, !Sub "https://${CustomDomainName}/ui", !Sub "https://${Api}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/ui"]
+    Value: !If [UseCustomDomainName, !Sub "https://${CustomDomainName}/ui", !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/ui"]
 
   ApiId:
-    Value: !Ref Api
+    Value: !Ref RestApi
 
 Resources:
 
-  Api:
+  RestApi:
     Type: AWS::ApiGateway::RestApi
     Properties:
       EndpointConfiguration:
@@ -83,13 +83,13 @@ Resources:
   Deployment{{ random_id }}:
     Type: AWS::ApiGateway::Deployment
     Properties:
-      RestApiId: !Ref Api
+      RestApiId: !Ref RestApi
 
   Stage:
     Type: AWS::ApiGateway::Stage
     Properties:
       StageName: api
-      RestApiId: !Ref Api
+      RestApiId: !Ref RestApi
       DeploymentId: !Ref Deployment{{ random_id }}
       AccessLogSetting:
         DestinationArn: !GetAtt ApiLogGroup.Arn
@@ -116,7 +116,7 @@ Resources:
     Condition: UseCustomDomainName
     Properties:
       DomainName: !Ref CustomDomainName
-      RestApiId: !Ref Api
+      RestApiId: !Ref RestApi
       Stage: !Ref Stage
 
   LambdaLogGroup:
@@ -198,4 +198,4 @@ Resources:
       FunctionName: !GetAtt Lambda.Arn
       Action: lambda:InvokeFunction
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${Api}/*"
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/*"
