--- a/apps/api/api-cf.yml.j2
+++ b/apps/api/api-cf.yml.j2
@@ -33,6 +33,9 @@ Parameters:
   PermissionsBoundaryPolicyArn:
     Type: String
 
+  VpcId:
+    Type: String
+
   SecurityGroupId:
     Type: String
 
@@ -45,12 +48,12 @@ Conditions:
 
   LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
-  UseCustomDomainName: !Not [!Equals [!Ref DomainName, ""]]
+  PublicApi: !Not [!Equals [!Ref DomainName, ""]]
 
 Outputs:
 
   Url:
-    Value: !If [UseCustomDomainName, !Sub "https://${CustomDomainName}/ui", !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/ui"]
+    Value: !If [PublicApi, !Sub "https://${CustomDomainName}/ui", !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/ui"]
 
   ApiId:
     Value: !Ref RestApi
@@ -62,7 +65,7 @@ Resources:
     Properties:
       EndpointConfiguration:
         Types:
-          - REGIONAL
+          - !If [PublicApi, REGIONAL, PRIVATE]
       Body:
         openapi: 3.0.3
         paths:
@@ -78,6 +81,19 @@ Resources:
                 type: aws_proxy
                 uri: !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${Lambda.Arn}/invocations"
                 httpMethod: POST
+      Policy:
+        !If
+          - PublicApi
+          - !Ref AWS::NoValue
+          - Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Principal: "*"
+                Action: execute-api:Invoke
+                Resource: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:*"
+                Condition:
+                  StringEquals:
+                    aws:SourceVpc: !Ref VpcId
 
   {% set random_id = range(1, 999999) | random %}
   Deployment{{ random_id }}:
@@ -102,7 +118,7 @@ Resources:
 
   CustomDomainName:
     Type: AWS::ApiGatewayV2::DomainName
-    Condition: UseCustomDomainName
+    Condition: PublicApi
     Properties:
       DomainName: !Ref DomainName
       DomainNameConfigurations:
@@ -111,7 +127,7 @@ Resources:
 
   ApiMapping:
     Type: AWS::ApiGatewayV2::ApiMapping
-    Condition: UseCustomDomainName
+    Condition: PublicApi
     Properties:
       ApiId: !Ref RestApi
       DomainName: !Ref CustomDomainName
