--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -33,9 +33,14 @@ Parameters:
   SubnetIds:
     Type: CommaDelimitedList
 
+  JPLRoles:
+    Type: String
+
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
+
+  UseJPLRoles: !Not [!Equals [!Ref JPLRoles, ""]]
 
 Outputs:
 
@@ -87,8 +92,10 @@ Resources:
         UploadLogLambdaArn: !GetAtt UploadLog.Outputs.LambdaArn
 
   StepFunctionRole:
-    Type: AWS::IAM::Role
+    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
     Properties:
+      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
+      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -101,8 +108,10 @@ Resources:
         - !Ref StepFunctionPolicy
 
   StepFunctionPolicy:
-    Type: AWS::IAM::ManagedPolicy
+    Type: !If [UseJPLRoles, Custom::JplPolicy, AWS::IAM::ManagedPolicy]
     Properties:
+      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplPolicy::ServiceToken, !Ref AWS::NoValue]
+      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
       PolicyDocument:
         Version: 2012-10-17
         Statement:
